--- a/client/microsteps/notesView.html
+++ b/client/microsteps/notesView.html
@@ -27,16 +27,16 @@
         <thead>
             <tr>
                 <th>Note</th>
-                <th>Options</th>
+                <th class="text-right">Options</th>
             </tr>
         </thead>
         <tbody>
             {{#each notes}}
                 <tr>
                     <td>{{title}}</td>
-                    <td>
+                    <td class="text-right">
                         <button type="button" name="viewNote" class="btn btn-primary view" id="{{_id}}">View/Edit</button>
-                        <button type="button" name="removeNote" class="btn btn-danger remove" id="{{_id}}">Remove</button>
+                        <button type="button" name="removeNote" class="btn btn-danger remove"><span class="glyphicon glyphicon-remove" id="{{_id}}"></span></button>
                     </td>
                 </tr>
             {{/each}}
