--- a/client/main/layout.html
+++ b/client/main/layout.html
@@ -30,4 +30,10 @@
   </nav>
   
   {{> yield}}
+  
+  <div class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container-fluid">
+      <h4 class="text-center">Developed by <a href="http://twitter.com/funcoder">funcoder</a></h4>
+    </div>
+  </div>
 </template>
