atNavButton needed to be in an <li>

--- a/client/main/layout.html
+++ b/client/main/layout.html
@@ -20,8 +20,8 @@
             {{#if currentUser}}
               <li><a href="#">Hi {{currentUser.username}}</a></li>
             {{/if}} 
+            <li>{{> atNavButton}}</li>
             
-            {{> atNavButton}}
           </ul>
         </div>        
       </div>
