--- a/client/microsteps/microstepsView.html
+++ b/client/microsteps/microstepsView.html
@@ -16,32 +16,23 @@
         </div>
     </div>
     
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Microsostep</th>
-                <th class="text-right">Options</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each microsteps}}
-                <tr>
-                    <td>{{title}}</td>
-                    <td class="text-right">
-                        <button type="button" name="removeMicrostep" class="btn btn-danger remove"><span class="glyphicon glyphicon-remove" id="{{_id}}"></span></button>
-                        
-                        {{#if isOnHold}}
-                            <button type="button" name="removeHoldMicrostep" class="btn btn-success releaseHold" id="{{_id}}">
-                                <span class="glyphicon glyphicon-hourglass" id="{{_id}}"></span>
-                            </button>
-                        {{else}}
-                            <button type="button" name="holdMicrostep" class="btn btn-primary makehold" id="{{_id}}">
-                                <span class="glyphicon glyphicon-pause" id="{{_id}}"></span>
-                            </button>
-                        {{/if}}
-                    </td>
-                </tr>
-            {{/each}}
-        </tbody>
-    </table>    
+    <div class="list-group">
+        {{#each microsteps}}
+            <a class="list-group-item clearfix">
+                <span class="glyphicon glyphicon-option-vertical"></span>
+                {{title}}
+                <span class="pull-right">
+                    {{#if isOnHold}}
+                        <button type="button" name="removeHoldMicrostep" class="btn btn-success releaseHold btn-xs" id="{{_id}}">
+                            <span class="glyphicon glyphicon-hourglass" id="{{_id}}"></span>
+                        </button>
+                    {{else}}
+                        <button type="button" name="holdMicrostep" class="btn btn-primary makehold btn-xs" id="{{_id}}">
+                            <span class="glyphicon glyphicon-pause" id="{{_id}}"></span>
+                        </button>
+                    {{/if}}                
+                </span>
+            </a>
+        {{/each}}
+    </div>
 </template>
